exports[`test renders ./components/breadcrumb/demo/basic.md correctly 1`] = `
<div
  class="ant-breadcrumb">
  <span>
    <span
      class="ant-breadcrumb-link">
      Home
    </span>
    <span
      class="ant-breadcrumb-separator">
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link">
      <a
        href="">
        Application Center
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator">
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link">
      <a
        href="">
        Application List
      </a>
    </span>
    <span
      class="ant-breadcrumb-separator">
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link">
      An Application
    </span>
    <span
      class="ant-breadcrumb-separator">
      /
    </span>
  </span>
</div>
`;

exports[`test renders ./components/breadcrumb/demo/router.md correctly 1`] = `
<div>
  <div
    class="demo-nav">
    <a
      href="#/">
      Home
    </a>
    <a
      href="#/apps">
      Application List
    </a>
  </div>
  Home
  <div
    style="margin-bottom:15px;margin-top:15px;padding-bottom:15px;border-bottom:1px dashed #ccc;">
    Click the navigation above to switch:
  </div>
  <div
    class="ant-breadcrumb">
    <span>
      <span
        class="ant-breadcrumb-link">
        <span>
          Home
        </span>
      </span>
      <span
        class="ant-breadcrumb-separator">
        /
      </span>
    </span>
  </div>
</div>
`;

exports[`test renders ./components/breadcrumb/demo/separator.md correctly 1`] = `
<div
  class="ant-breadcrumb">
  <span>
    <span
      class="ant-breadcrumb-link">
      Home
    </span>
    <span
      class="ant-breadcrumb-separator">
      >
    </span>
  </span>
  <span>
    <a
      class="ant-breadcrumb-link"
      href="">
      Application Center
    </a>
    <span
      class="ant-breadcrumb-separator">
      >
    </span>
  </span>
  <span>
    <a
      class="ant-breadcrumb-link"
      href="">
      Application List
    </a>
    <span
      class="ant-breadcrumb-separator">
      >
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link">
      An Application
    </span>
    <span
      class="ant-breadcrumb-separator">
      >
    </span>
  </span>
</div>
`;

exports[`test renders ./components/breadcrumb/demo/withIcon.md correctly 1`] = `
<div
  class="ant-breadcrumb">
  <span>
    <a
      class="ant-breadcrumb-link"
      href="">
      <i
        class="anticon anticon-home" />
    </a>
    <span
      class="ant-breadcrumb-separator">
      /
    </span>
  </span>
  <span>
    <a
      class="ant-breadcrumb-link"
      href="">
      <i
        class="anticon anticon-user" />
      <span>
        Application List
      </span>
    </a>
    <span
      class="ant-breadcrumb-separator">
      /
    </span>
  </span>
  <span>
    <span
      class="ant-breadcrumb-link">
      Application
    </span>
    <span
      class="ant-breadcrumb-separator">
      /
    </span>
  </span>
</div>
`;
